# cedille

./: .gitignore  .gitmodules  .travis.yml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.txt  LICENSE  Makefile  Makefile.gratr  README.md  Setup.hs  cedille-deb-control  cedille-mode.el  cedille-template.html  cedille-types.agda  cedille.agda  cedille.cabal  cedille.gr  cedille.sh  check-util.agda  check.agda  classify.agda  compile.bat  compile.sh  constants.agda  conversion.agda  create-libraries.sh  ctxt.agda  defaults  defeq.agda  eqs.agda  features-list.txt  free.agda  hnf-tests.agda  hnf.agda  is-free.agda  libraries  lift-tests.agda  lift.agda  (+20 more)
.cedille/: options
DatatypeElaborationExamples/: Bool.ced  Cast.ced  Maybe.ced  Mendler.ced  MendlerI.ced  Pair.ced  RecType.ced  Sum.ced  Top.ced
cedille-mode/: cedille-core-mode.el  cedille-mode-archive-template.html  cedille-mode-archive.css  cedille-mode-archive.el  cedille-mode-archive.js  cedille-mode-beta-reduce.el  cedille-mode-beta-reduce2.el  cedille-mode-context.el  cedille-mode-customize.el  cedille-mode-errors.el  cedille-mode-faces.el  cedille-mode-find.el  cedille-mode-highlight.el  cedille-mode-info.el  cedille-mode-inspect.el  cedille-mode-library.el  cedille-mode-markup.el  cedille-mode-meta-vars.el  cedille-mode-navigate.el  cedille-mode-normalize.el  cedille-mode-parent.el  cedille-mode-scratch.el  cedille-mode-summary.el  cedille-mode-synthesis.el
cedille-tests/: README.md  cedille-mode-tests.el  instructions  (+1 more)
parser/: ChangeLog.md  Makefile  README.md  cedilleparser.cabal  testParser.sh
parser/src/: CedilleCommentsLexer.x  CedilleLexer.x  CedilleOptionsLexer.x  CedilleOptionsParser.y  CedilleParser.info  CedilleParser.y  cedille-types.agda  cws-types.agda  test.agda  testComments.agda
parser/test/: EvenOdd.ced  Tests.hs  alg.ced  sigma.ced
(+1116 files in other folders)
